# lightlisp

./: CMakeLists.txt  README.md  build.sh  err.c  lisp.txt  run.sh
compiler/: CMakeLists.txt  compiler.cpp  compiler.h  util.cpp  util.h
definitions/: CMakeLists.txt  interfaces.h  llvmincludes.h  memory.cpp  meta.cpp  meta.h  objects.h  prepare.cpp  prepare.h  types.cpp  types.h
guide/: FAQ.md
ir1lisp/: CMakeLists.txt  ir1lisp.cpp  ir1lisp.h
ir2lisp/: CMakeLists.txt  ir2lisp.cpp  ir2lisp.h
optimizer/: CMakeLists.txt  Optimizer.cpp  Optimizer.h
parser/: CMakeLists.txt  parser.cpp  parser.h
scheme-compiler/: CMakeLists.txt  compiler.cpp
scheme-parser/: CMakeLists.txt  parser.cpp  parser.h
scheme-tokenizer/: CMakeLists.txt  tokenizer.h
src/: CMakeLists.txt  Optimizer.cpp  Optimizer.h  main.cpp  prepare.cpp  prepare.h
tokenizer/: CMakeLists.txt  tokenizer.h
